--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,11 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"],
+    }
   },
   "include": [
     "next-env.d.ts",
@@ -31,7 +35,4 @@
   "exclude": [
     "node_modules"
   ],
-  "paths": {
-    "@/*": ["./src/*"]
-  }
 }
