--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "22.3.0",
     "@types/react": "18.3.3",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "tsconfig-paths": "^4.2.0"
   }
 }
