--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "install": "^0.13.0",
     "mongoose": "^8.0.0",
     "next": "14.0.4",
+    "next-auth": "^5.0.0-beta.3",
+    "npm": "^10.2.5",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "22.3.0",
     "@types/react": "18.3.3",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
-    "tsconfig-paths": "^4.2.0"
+    "eslint-config-next": "14.0.4"
   }
 }
